cmake_minimum_required(VERSION 3.13)
project(PlayWithDataStructureSourceCode_UTF_8 C)

set(CMAKE_CXX_STANDARD 90)

include_directories(.)

add_executable(PlayWithDataStructureSourceCode_UTF_8
#        第3章线性表/01线性表顺序存储_List_UTF-8.c
#        第3章线性表/02线性表链式存储_LinkList_UTF-8.c
#        第3章线性表/03静态链表_StaticLinkList_UTF-8.c
#        第3章线性表/04循环链表_CircleLinkList.c
#        第3章线性表/05双向循环链表_DuLinkList.c
#        第4章栈与队列/01顺序栈_Stack_UTF-8.c
#        第4章栈与队列/02两栈共享空间_DoubleStack_UTF-8.c
#        第4章栈与队列/03链栈_LinkStack_UTF-8.c
#        第4章栈与队列/04斐波那契函数_Fibonacci_UTF-8.c
#        第4章栈与队列/05顺序队列_Queue_UTF-8.c
#        第4章栈与队列/06链队列_LinkQueue_UTF-8.c
#        第5章串/01串_String_UTF-8.c
#        第5章串/02模式匹配_KMP_UTF-8.c
#        第6章树/01二叉树顺序结构实现_BiTreeArray_UTF-8.c
        第6章树/02二叉树链式结构实现_BiTreeLink_UTF-8.c
#        第6章树/03线索二叉树_ThreadBinaryTree_UTF-8.c
#        第7章图/01邻接矩阵创建_CreateMGraph_UTF-8.c
#        第7章图/02邻接表创建_CreateALGraph_UTF-8.c
#        第7章图/03邻接矩阵深度和广度遍历DFS_BFS_UTF-8.c
#        第7章图/04邻接表深度和广度遍历DFS_BFS_UTF-8.c
#        第7章图/05最小生成树_Prim_UTF-8.c
#        第7章图/06最小生成树_Kruskal_UTF-8.c
#        第7章图/07最短路径_Dijkstra_UTF-8.c
#        第7章图/08最短路径_Floyd_UTF-8.c
#        第7章图/09拓扑排序_TopologicalSort_UTF-8.c
#        第7章图/10关键路径_CriticalPath_UTF-8.c
#        第8章查找/01静态查找_Search_UTF-8.c
#        第8章查找/02二叉排序树_BinarySortTree_UTF-8.c
#        第8章查找/03平衡二叉树_AVLTree_UTF-8.c
#        第8章查找/04B树_BTree_UTF-8.c
#        第8章查找/05散列表_HashTable_UTF-8.c
#        第9章排序/01排序_Sort_UTF-8.c
        )
